@@ -1,3 +1,9 @@
+-- ircd-hybrid-8.0.3 Release Notes
+o) Fixed core on UNDLINE
+o) XLINE/KLINE/RESV/DLINE/SQUIT and KILL now have the same default reason
+   if a reason hasn't been specified
+
+
 -- ircd-hybrid-8.0.2 Release Notes
 o) Minor updates to the build system
 o) Fixed broken --enable-assert configure switch
